<resources>
    <string name="app_name">GameList</string>
    <string name="tienda">Tienda</string>
    <string name="favorito">Favorito</string>
    <string name="valoraci_n">Valoración</string>
    <string name="NS">Switch</string>
    <string name="playstation">PlayStation</string>
    <string name="xbox">XBOX</string>
    <string name="pc">PC</string>
    <string name="plataforma">Plataforma</string>
    <string name="anho_salida">Año Salida</string>
    <string name="genero">Género</string>
    <string name="desarrolladora">Desarrolladora</string>
    <string name="nombre">Nombre</string>
    <string name="volver">Volver</string>
    <string name="a_adir">Añadir</string>
    <string name="ver_relacionados">Ver Relacionados</string>
    <string name="desconocida">Desconocida</string>
    <string name="desconocido">Desconocido</string>
    <string name="DrpBtnPorDefecto">Seleccione</string>
    <string name="borrarVideojuegoQ">¿Quiere borrar el videojuego?</string>
    <string name="borrar">Borrar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cerrar">Cerrar</string>
    <string name="descDetalles">Esta aplicacion te servirá para poder guardar tus videojuegos favoritos y/o tus próximas compras de una manera sencilla y útil</string>
    <string name="acercaDe">Acerca de GameList:</string>
    <string name="gameList">GameList</string>
    <string name="anhadirJuego">Añadir juego</string>
    <string name="nombreObligatorio">El videojuego tiene que tener nombre</string>
    <string name="fechaTieneQueSerNumero">La fecha de salida tiene que ser un número entero</string>
    <string name="fechaMayorQue">La fecha de salida tiene que ser un mayor o igual a</string>
    <string name="fechaDesconocida">\????</string>
    <string name="detallesJuego">Detalles del juego</string>
    <string name="relacionados">Relacionados</string>
    <string name="anhadir">Añadir</string>
    <string name="escribe_tu_review">Escribe tu review</string>
    <string name="darkMode">Modo Oscuro</string>
    <string name="nomUsuPublico">Nombre Usuario Publico</string>
    <string name="usarPreferencias">Usar Preferencias</string>

    <string-array name="Desarrolladoras">
        <item>Seleccione</item>
        <item>Nintendo</item>
        <item>Rockstar</item>
        <item>Ubisoft</item>
        <item>Sony</item>
        <item>EA</item>
        <item>Valve</item>
    </string-array>

    <string-array name="Generos">
        <item>Seleccione</item>
        <item>MMO</item>
        <item>MOBA</item>
        <item>FPS</item>
        <item>Simulacion</item>
        <item>RPG</item>
        <item>Lucha</item>
    </string-array>


    <string-array name="Tienda">
        <item>Seleccione</item>
        <item>GAME</item>
        <item>FNAC</item>
        <item>GameStop</item>
        <item>Amazon</item>
        <item>Ebay</item>
        <item>AliExpress</item>
    </string-array>

</resources>
