<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <CheckBoxPreference
            android:key="@string/usarPreferencias"
            android:title="Usar Preferencias"
            android:summary="Indica si quieres usar las preferencias personalizadas" />

        <EditTextPreference
            android:key="@string/nomUsuPublico"
            android:title="Nombre de Usuario público"
            android:summary="Elige qué nombre quieres que se vea en tus comentarios."
            android:dialogTitle="Introduce un nombre:" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Tema de la aplicación">

        <CheckBoxPreference
            android:key="@string/darkMode"
            android:title="Modo Oscuro"
            android:summary="La aplicación pasará a modo oscuro"/>


    </PreferenceCategory>


</PreferenceScreen>