<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnhadirOpinion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="57dp">

        <TextView
            android:id="@+id/opNombre"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:gravity="center"
            android:text="@string/nombre"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/opDesarrolladora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/desarrolladora"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/opValoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fitsSystemWindows="false"
            android:numStars="5"
            android:stepSize="0.2" />

        <EditText
            android:id="@+id/etOpReview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/escribe_tu_review"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <Button
        android:id="@+id/btopAñadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anhadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>